trying to prevent body scrooling on mobile, added body { overflow: hidden}; to client.css

--- a/public/styles/client.css
+++ b/public/styles/client.css
@@ -1,3 +1,7 @@
+body {
+    overflow: hidden;
+}
+
 #stage {
     /*width: 480px;
     height: 320px;*/
